--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "sn22.38:2.4": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind?‘ ",
   "sn22.38:2.5": "Wie würdest du antworten?“ ",
   "sn22.38:2.6": "„Herr, angenommen, ich würde gefragt: ",
-  "sn22.38:2.7": "‚Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen waren? ",
+  "sn22.38:2.7": "‚Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar waren? ",
   "sn22.38:2.8": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sein werden? ",
   "sn22.38:2.9": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens zu erkennen sind?‘, ",
   "sn22.38:2.10": "dann würde ich so antworten: ",
