--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "sn22.38:2.9": "Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind?‘, ",
   "sn22.38:2.10": "dann würde ich so antworten: ",
   "sn22.38:2.11": "‚Geehrter, wenn Form vergangen ist, aufgehört hat und zugrunde gegangen ist, ",
-  "sn22.38:2.12": "sah man ihr Entstehen, man sah ihr Verschwinden und man sah, dass sie sich änderte, während sie bestand. ",
+  "sn22.38:2.12": "waren ihr Entstehen, ihr Verschwinden und eine Veränderung während ihres Bestehens erkennbar. ",
   "sn22.38:2.13": "Wenn Gefühl … ",
   "sn22.38:2.15": "Wahrnehmung … ",
   "sn22.38:2.16": "Willensbildungsprozesse … ",
