--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "sn22.38:2.19": "waren sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
   "sn22.38:2.20": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar waren. ",
   "sn22.38:3.1": "Wenn Form noch nicht geboren, noch nicht erschienen ist, ",
-  "sn22.38:3.2": "wird man ihr Entstehen sehen, man wird ihr Verschwinden sehen und man wird sehen, dass sie sich ändern wird, während sie besteht. ",
+  "sn22.38:3.2": "werden ihr Entstehen, ihr Verschwinden und eine Veränderung während ihres Bestehens erkennbar sein. ",
   "sn22.38:3.3": "Wenn Gefühl … ",
   "sn22.38:3.5": "Wahrnehmung … ",
   "sn22.38:3.6": "Willensbildungsprozesse … ",
