--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -29,7 +29,7 @@
   "sn22.38:3.6": "Willensbildungsprozesse … ",
   "sn22.38:3.8": "Bewusstsein noch nicht geboren, noch nicht erschienen ist, ",
   "sn22.38:3.9": "werden sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar sein. ",
-  "sn22.38:3.10": "Das sind die Dinge, bei denen man das Entstehen sehen wird, das Verschwinden sehen wird und sehen wird, dass sie sich ändern werden, während sie bestehen. ",
+  "sn22.38:3.10": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sein werden. ",
   "sn22.38:4.1": "Wenn Form geboren und erschienen ist, ",
   "sn22.38:4.2": "sieht man ihr Entstehen, man sieht ihr Verschwinden und man sieht, dass sie sich ändert, während sie besteht. ",
   "sn22.38:4.3": "Wenn Gefühl … ",
