--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "sn22.38:4.3": "Wenn Gefühl … ",
   "sn22.38:4.4": "Wahrnehmung … ",
   "sn22.38:4.5": "Willensbildungsprozesse … ",
-  "sn22.38:4.7": "Bewusstsein geboren und erschienen ist, sieht man sein Entstehen, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
+  "sn22.38:4.7": "Bewusstsein geboren und erschienen ist, sind sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
   "sn22.38:4.8": "Das sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen.‘ ",
   "sn22.38:4.9": "So würde ich eine solche Frage beantworten.“ ",
   "sn22.38:5.1": "„Gut, gut, Ānanda! ",
