--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "sn22.38:4.9": "So würde ich eine solche Frage beantworten.“ ",
   "sn22.38:5.1": "„Gut, gut, Ānanda! ",
   "sn22.38:5.2": "Wenn Form vergangen ist, aufgehört hat und zugrunde gegangen ist, ",
-  "sn22.38:5.3": "sah man ihr Entstehen, man sah ihr Verschwinden und man sah, dass sie sich änderte, während sie bestand. ",
+  "sn22.38:5.3": "waren ihr Entstehen, ihr Verschwinden und eine Veränderung während ihres Bestehens erkennbar. ",
   "sn22.38:5.4": "Wenn Gefühl … ",
   "sn22.38:5.5": "Wahrnehmung … ",
   "sn22.38:5.6": "Willensbildungsprozesse … ",
