--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -46,7 +46,7 @@
   "sn22.38:5.6": "Willensbildungsprozesse … ",
   "sn22.38:5.7": "Bewusstsein vergangen ist, aufgehört hat und zugrunde gegangen ist, ",
   "sn22.38:5.8": "waren sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
-  "sn22.38:5.9": "Das sind die Dinge, bei denen man das Entstehen sah, das Verschwinden sah und sah, dass sie sich änderten, während sie bestanden. ",
+  "sn22.38:5.9": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar waren. ",
   "sn22.38:6.1": "Wenn Form noch nicht geboren, noch nicht erschienen ist, ",
   "sn22.38:6.2": "wird man ihr Entstehen sehen, man wird ihr Verschwinden sehen und man wird sehen, dass sie sich ändern wird, während sie besteht. ",
   "sn22.38:6.3": "Wenn Gefühl … ",
