--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -48,7 +48,7 @@
   "sn22.38:5.8": "waren sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
   "sn22.38:5.9": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar waren. ",
   "sn22.38:6.1": "Wenn Form noch nicht geboren, noch nicht erschienen ist, ",
-  "sn22.38:6.2": "wird man ihr Entstehen sehen, man wird ihr Verschwinden sehen und man wird sehen, dass sie sich ändern wird, während sie besteht. ",
+  "sn22.38:6.2": "werden ihr Entstehen, ihr Verschwinden und eine Veränderung während ihres Bestehens erkennbar sein. ",
   "sn22.38:6.3": "Wenn Gefühl … ",
   "sn22.38:6.4": "Wahrnehmung … ",
   "sn22.38:6.5": "Willensbildungsprozesse … ",
