--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -53,7 +53,7 @@
   "sn22.38:6.4": "Wahrnehmung … ",
   "sn22.38:6.5": "Willensbildungsprozesse … ",
   "sn22.38:6.6": "Bewusstsein noch nicht geboren, noch nicht erschienen ist, ",
-  "sn22.38:6.7": "wird man sein Entstehen sehen, man wird sein Verschwinden sehen und man wird sehen, dass es sich ändern wird, während es besteht. ",
+  "sn22.38:6.7": "werden sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar sein. ",
   "sn22.38:6.8": "Das sind die Dinge, bei denen man das Entstehen sehen wird, das Verschwinden sehen wird und sehen wird, dass sie sich ändern werden, während sie bestehen. ",
   "sn22.38:7.1": "Wenn Form geboren und erschienen ist, ",
   "sn22.38:7.2": "sieht man ihr Entstehen, man sieht ihr Verschwinden und man sieht, dass sie sich ändert, während sie besteht. ",
