--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "sn22.38:6.7": "werden sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar sein. ",
   "sn22.38:6.8": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sein werden. ",
   "sn22.38:7.1": "Wenn Form geboren und erschienen ist, ",
-  "sn22.38:7.2": "sieht man ihr Entstehen, man sieht ihr Verschwinden und man sieht, dass sie sich ändert, während sie besteht. ",
+  "sn22.38:7.2": "sind ihr Entstehen, ihr Verschwinden und eine Veränderung während ihres Bestehens erkennbar. ",
   "sn22.38:7.3": "Wenn Gefühl … ",
   "sn22.38:7.4": "Wahrnehmung … ",
   "sn22.38:7.5": "Willensbildungsprozesse … ",
