--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -61,7 +61,7 @@
   "sn22.38:7.4": "Wahrnehmung … ",
   "sn22.38:7.5": "Willensbildungsprozesse … ",
   "sn22.38:7.6": "Bewusstsein geboren und erschienen ist, ",
-  "sn22.38:7.7": "sieht man sein Entstehen, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
+  "sn22.38:7.7": "sind sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
   "sn22.38:7.8": "Das sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen. ",
   "sn22.38:7.9": "So solltest du eine solche Frage beantworten.“ "
 }
