--- a/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti19_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "iti19:2.6": "Der Buddha sprach diese Sache. ",
   "iti19:2.7": "Dazu wird gesagt: ",
   "iti19:3.1": "„Ein Saṅgha in Eintracht ist glücklich, ",
-  "iti19:3.2": "und Rückhalt für die Einträchtigen ist Glück. ",
+  "iti19:3.2": "und Rückhalt ist für die Einträchtigen Glück. ",
   "iti19:3.3": "Wenn er in der Lehre steht ",
   "iti19:3.4": "und Eintracht bevorzugt, richtet er kein Refugium zugrunde. ",
   "iti19:3.5": "Wenn er im Saṅgha Eintracht geschaffen hat, ",
