--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -1,4 +1,5 @@
 {
   "thig6.4:0.1": "Стихи старших монахинь 6.4 ",
-  "thig6.4:0.2": "Шесть строф "
+  "thig6.4:0.2": "Шесть строф ",
+  "thig6.4:0.3": "Суджата Тхери "
 }
