--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -4,5 +4,6 @@
   "thig6.4:0.3": "Суджата Тхери ",
   "thig6.4:1.1": "Украшена, наряжена, ",
   "thig6.4:1.2": "Гирляндами и сандалом умащена, ",
-  "thig6.4:1.4": "Жила я в окружении служанок. "
+  "thig6.4:1.4": "Жила я в окружении служанок. ",
+  "thig6.4:2.1": "Напитки, яства взяв, "
 }
