--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -6,5 +6,6 @@
   "thig6.4:1.2": "Гирляндами и сандалом умащена, ",
   "thig6.4:1.4": "Жила я в окружении служанок. ",
   "thig6.4:2.1": "Напитки, яства взяв, ",
-  "thig6.4:2.2": "Мы в парк отправились прелестный, "
+  "thig6.4:2.2": "Мы в парк отправились прелестный, ",
+  "thig6.4:2.3": "Играли там, затем вернулись в дом. "
 }
