--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -8,5 +8,6 @@
   "thig6.4:2.1": "Напитки, яства взяв, ",
   "thig6.4:2.2": "Мы в парк отправились прелестный, ",
   "thig6.4:2.3": "Играли там, затем вернулись в дом. ",
-  "thig6.4:2.4": "И я увидела в Сакете, в лесу Анджана, монастырь. "
+  "thig6.4:2.4": "И я увидела в Сакете, в лесу Анджана, монастырь. ",
+  "thig6.4:3.1": "Узрев Татхагату в монастыре, "
 }
