--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.4:3.2": "Сиянье мира нашего, ",
   "thig6.4:3.3": "",
   "thig6.4:4.1": "Сиянье мира нашего, ",
-  "thig6.4:4.2": "Ему я почести воздав, присела рядом. "
+  "thig6.4:4.2": "Ему я почести воздав, присела рядом. ",
+  "thig6.4:4.3": "Из сострадания он преподал мне Дхамму, "
 }
