--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -11,7 +11,7 @@
   "thig6.4:2.4": "И я увидела в Сакете, в лесу Анджана, монастырь. ",
   "thig6.4:3.1": "Играли там, затем вернулись в дом. ",
   "thig6.4:3.2": "",
-  "thig6.4:3.3": "",
+  "thig6.4:3.3": "И я увидела в Сакете, в лесу Анджана, монастырь. ",
   "thig6.4:4.1": "Сиянье мира нашего, ",
   "thig6.4:4.2": "Ему я почести воздав, присела рядом. ",
   "thig6.4:4.3": "Из сострадания он преподал мне Дхамму, ",
