--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig6.4:4.3": "Из сострадания он преподал мне Дхамму, ",
   "thig6.4:4.4": "Зрячий. ",
   "thig6.4:5.1": "Слова Отшельника великого услышав, ",
-  "thig6.4:5.2": "Проникла в истину я. "
+  "thig6.4:5.2": "Проникла в истину я. ",
+  "thig6.4:5.3": "Познав Дхамму незапылённую, "
 }
