--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.4:5.2": "Проникла в истину я. ",
   "thig6.4:5.3": "Познав Дхамму незапылённую, ",
   "thig6.4:5.4": "Коснулась я Неумирающего. ",
-  "thig6.4:6.1": "Дхамму славную познав, "
+  "thig6.4:6.1": "Дхамму славную познав, ",
+  "thig6.4:6.2": "Ушла в скитанья я. "
 }
