--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig6.4:5.4": "Коснулась я Неумирающего. ",
   "thig6.4:6.1": "Дхамму славную познав, ",
   "thig6.4:6.2": "Ушла в скитанья я. ",
-  "thig6.4:6.3": "Три знания открылись для меня, "
+  "thig6.4:6.3": "Три знания открылись для меня, ",
+  "thig6.4:6.4": "Не пустословно, воистину, Учение Будды. "
 }
