--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -2,5 +2,6 @@
   "thig6.5:0.1": "Стихи старших монахинь 6.5 ",
   "thig6.5:0.2": "Шесть строф ",
   "thig6.5:0.3": "Анопама Тхери ",
-  "thig6.5:1.1": "В высокой рождена семье, "
+  "thig6.5:1.1": "В высокой рождена семье, ",
+  "thig6.5:1.2": "Богатством изобилующей, "
 }
