--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,5 @@
   "thig6.5:0.2": "Шесть строф ",
   "thig6.5:0.3": "Анопама Тхери ",
   "thig6.5:1.1": "В высокой рождена семье, ",
-  "thig6.5:1.2": "Богатством изобилующей, "
+  "thig6.5:1.2": "Богатством изобилующей, <j>С имуществом великим. "
 }
