--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -4,5 +4,6 @@
   "thig6.5:0.3": "Анопама Тхери ",
   "thig6.5:1.1": "В высокой рождена семье, ",
   "thig6.5:1.2": "Богатством изобилующей, <j>С имуществом великим. ",
-  "thig6.5:1.3": "Сама я дивною красой наделена была, "
+  "thig6.5:1.3": "Сама я дивною красой наделена была, ",
+  "thig6.5:1.4": "Дочь Маджи истинная. "
 }
