--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig6.5:3.2": "За дочь твою, за Анопаму, —",
   "thig6.5:3.3": "Я больше в восемь раз отдам ",
   "thig6.5:3.4": "И злата, и камней!» ",
-  "thig6.5:4.1": "Но я, узрев Всецело пробуждённого, "
+  "thig6.5:4.1": "Но я, узрев Всецело пробуждённого, ",
+  "thig6.5:4.2": "Непревзойдённого, Старейшину мира, "
 }
