--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig6.5:3.3": "Я больше в восемь раз отдам ",
   "thig6.5:3.4": "И злата, и камней!» ",
   "thig6.5:4.1": "Но я, узрев Всецело пробуждённого, ",
-  "thig6.5:4.2": "Непревзойдённого, Старейшину мира, "
+  "thig6.5:4.2": "Непревзойдённого, Старейшину мира, ",
+  "thig6.5:4.3": "Воздала почести ему, "
 }
