--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig6.5:4.1": "Но я, узрев Всецело пробуждённого, ",
   "thig6.5:4.2": "Непревзойдённого, Старейшину мира, ",
   "thig6.5:4.3": "Воздала почести ему, ",
-  "thig6.5:4.4": "В стороне присела. "
+  "thig6.5:4.4": "В стороне присела. ",
+  "thig6.5:5.1": "Из сострадания он преподал мне Дхамму, Готама. "
 }
