--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.5:4.4": "В стороне присела. ",
   "thig6.5:5.1": "Из сострадания он преподал мне Дхамму, Готама. ",
   "thig6.5:5.3": "Её услышав, ",
-  "thig6.5:5.4": "Я коснулась третьего плода. "
+  "thig6.5:5.4": "Я коснулась третьего плода. ",
+  "thig6.5:6.1": "Я волосы свои остригла "
 }
