--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig6.5:5.3": "Её услышав, ",
   "thig6.5:5.4": "Я коснулась третьего плода. ",
   "thig6.5:6.1": "Я волосы свои остригла ",
-  "thig6.5:6.2": "В скитания ушла. "
+  "thig6.5:6.2": "В скитания ушла. ",
+  "thig6.5:6.3": "Сегодня ночь седьмая, "
 }
