--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -126,7 +126,7 @@
   "dn15:22.6": "Bis zu diesem Punkt erstreckt sich der Geltungsbereich von Benennen, Ausdrucksweise und Beschreibung; erstreckt sich der Bereich der Weisheit; setzt sich der Kreislauf der Wiedergeburten fort, sodass es einen solchen Zustand geben kann: nämlich Name und Form zusammen mit Bewusstsein. ",
   "dn15:23.0": "2. Das Selbst beschreiben ",
   "dn15:23.1": "Die, die ein Selbst beschreiben: Inwiefern beschreiben sie es? ",
-  "dn15:23.2": "Sie beschreiben es als materiell und begrenzt: ",
+  "dn15:23.2": "Sie beschreiben es als geformt und begrenzt: ",
   "dn15:23.3": "‚Mein Selbst ist materiell und begrenzt.‘ ",
   "dn15:23.4": "Oder sie beschreiben es als materiell und unendlich: ",
   "dn15:23.5": "‚Mein Selbst ist materiell und unendlich.‘ ",
