--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -127,7 +127,7 @@
   "dn15:23.0": "2. Das Selbst beschreiben ",
   "dn15:23.1": "Die, die ein Selbst beschreiben: Inwiefern beschreiben sie es? ",
   "dn15:23.2": "Sie beschreiben es als geformt und begrenzt: ",
-  "dn15:23.3": "‚Mein Selbst ist materiell und begrenzt.‘ ",
+  "dn15:23.3": "‚Mein Selbst ist geformt und begrenzt.‘ ",
   "dn15:23.4": "Oder sie beschreiben es als materiell und unendlich: ",
   "dn15:23.5": "‚Mein Selbst ist materiell und unendlich.‘ ",
   "dn15:23.6": "Oder sie beschreiben es als immateriell und begrenzt: ",
