--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -129,7 +129,7 @@
   "dn15:23.2": "Sie beschreiben es als geformt und begrenzt: ",
   "dn15:23.3": "‚Mein Selbst ist geformt und begrenzt.‘ ",
   "dn15:23.4": "Oder sie beschreiben es als geformt und unendlich: ",
-  "dn15:23.5": "‚Mein Selbst ist materiell und unendlich.‘ ",
+  "dn15:23.5": "‚Mein Selbst ist geformt und unendlich.‘ ",
   "dn15:23.6": "Oder sie beschreiben es als immateriell und begrenzt: ",
   "dn15:23.7": "‚Mein Selbst ist immateriell und begrenzt.‘ ",
   "dn15:23.8": "Oder sie beschreiben es als immateriell und unendlich: ",
