--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -131,7 +131,7 @@
   "dn15:23.4": "Oder sie beschreiben es als geformt und unendlich: ",
   "dn15:23.5": "‚Mein Selbst ist geformt und unendlich.‘ ",
   "dn15:23.6": "Oder sie beschreiben es als formlos und begrenzt: ",
-  "dn15:23.7": "‚Mein Selbst ist immateriell und begrenzt.‘ ",
+  "dn15:23.7": "‚Mein Selbst ist formlos und begrenzt.‘ ",
   "dn15:23.8": "Oder sie beschreiben es als immateriell und unendlich: ",
   "dn15:23.9": "‚Mein Selbst ist immateriell und unendlich.‘ ",
   "dn15:24.1": "Nehmen wir nun die, die das Selbst als materiell und begrenzt beschreiben. ",
