--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -132,7 +132,7 @@
   "dn15:23.5": "‚Mein Selbst ist geformt und unendlich.‘ ",
   "dn15:23.6": "Oder sie beschreiben es als formlos und begrenzt: ",
   "dn15:23.7": "‚Mein Selbst ist formlos und begrenzt.‘ ",
-  "dn15:23.8": "Oder sie beschreiben es als immateriell und unendlich: ",
+  "dn15:23.8": "Oder sie beschreiben es als formlos und unendlich: ",
   "dn15:23.9": "‚Mein Selbst ist immateriell und unendlich.‘ ",
   "dn15:24.1": "Nehmen wir nun die, die das Selbst als materiell und begrenzt beschreiben. ",
   "dn15:24.2": "Sie beschreiben das Selbst als materiell und begrenzt in der Gegenwart; oder als etwas, das an einem anderen Ort materiell und begrenzt werden muss; oder sie denken: ‚Obwohl es nicht so ist, werde ich sicherstellen, dass es das bekommt, was nötig ist, damit es so wird.‘ ",
