--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -136,7 +136,7 @@
   "dn15:23.9": "‚Mein Selbst ist formlos und unendlich.‘ ",
   "dn15:24.1": "Nehmen wir nun die, die das Selbst als geformt und begrenzt beschreiben. ",
   "dn15:24.2": "Sie beschreiben das Selbst als geformt und begrenzt in der Gegenwart; oder als etwas, das an einem anderen Ort geformt und begrenzt werden muss; oder sie denken: ‚Obwohl es nicht so ist, werde ich sicherstellen, dass es das bekommt, was nötig ist, damit es so wird.‘ ",
-  "dn15:24.3": "Wenn das so ist, dann ist es angebracht, zu sagen, dass bei ihnen der Glaube an ein Selbst als materiell und begrenzt zugrunde liegt. ",
+  "dn15:24.3": "Wenn das so ist, dann ist es angebracht, zu sagen, dass bei ihnen der Glaube an ein Selbst als geformt und begrenzt zugrunde liegt. ",
   "dn15:24.4": "Nehmen wir nun die, die das Selbst als materiell und unendlich beschreiben … ",
   "dn15:24.7": "als immateriell und begrenzt … ",
   "dn15:24.10": "oder als immateriell und unendlich. ",
