--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -145,7 +145,7 @@
   "dn15:24.13": "Die, die ein Selbst beschreiben: Insofern beschreiben sie es. ",
   "dn15:25.0": "3. Das Selbst nicht beschreiben ",
   "dn15:25.1": "Die, die kein Selbst beschreiben: Inwiefern beschreiben sie es nicht? ",
-  "dn15:25.2": "Sie beschreiben es nicht als materiell und begrenzt … ",
+  "dn15:25.2": "Sie beschreiben es nicht als geformt und begrenzt … ",
   "dn15:25.4": "nicht als materiell und unendlich … ",
   "dn15:25.6": "nicht als immateriell und begrenzt … ",
   "dn15:25.8": "und nicht als immateriell und unendlich: ",
