--- a/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn15_translation-de-sabbamitta.json
@@ -147,7 +147,7 @@
   "dn15:25.1": "Die, die kein Selbst beschreiben: Inwiefern beschreiben sie es nicht? ",
   "dn15:25.2": "Sie beschreiben es nicht als geformt und begrenzt … ",
   "dn15:25.4": "nicht als geformt und unendlich … ",
-  "dn15:25.6": "nicht als immateriell und begrenzt … ",
+  "dn15:25.6": "nicht als formlos und begrenzt … ",
   "dn15:25.8": "und nicht als immateriell und unendlich: ",
   "dn15:25.9": "‚Mein Selbst ist immateriell und unendlich.‘ ",
   "dn15:26.1": "Nehmen wir nun die, die das Selbst nicht als materiell und begrenzt beschreiben … ",
